# mcanalysis

./: .gitignore  CMakeLists.txt  FindPythia8.cmake  GUIDELINES  INSTALL  README  README_GIT  TODO_LIST
analyses/: CMakeLists.txt  dijet_atl_conf-12-148.cpp  dijet_cms_exo-12-059.cpp  fchi_atl.cpp  jetmass_atl_susy-2013-07.cpp  monojet_atl_exot-2013-13.cpp  paired_dijet_cms_exo-11-016.cpp
cmake/: FindHepMC.cmake  FindPythia8.cmake  FindPython.cmake
gres/: CMakeLists.txt  gres_basic.cpp  gres_comb.cpp
hceff/: CMakeLists.txt
scripts/: CMakeLists.txt  analyze_data.py  calc_val.cpp  change_par.sh  gen_grid.sh  lhe_to_lhco.sh  mca.py  read_xsec.sh  run_mg5.py  run_mg5.sh
source/: CMakeLists.txt
source/bumphunter/: bumphunter.cpp  bumphunter.h
source/cuts/: cuts.cpp  cuts.h  cuts_advanced.cpp  cuts_advanced.h  cuts_default.h  cuts_imp.h  cuts_standard.cpp  cuts_standard.h
source/event/: event.cpp  event.h  mt2_bisect.cpp  mt2_bisect.h
source/gres/: gres_cuts.cpp  gres_cuts.h  gres_hunter.cpp  gres_hunter.h
source/histogram/: histogram.cpp  histogram.h  histogram2D.cpp  histogram2D.h  interpolate.py
source/jet_analysis/: HEPTopTagger.cpp  HEPTopTagger.h  initialisation.cpp  isolation.cpp  jet_analysis.cpp  jet_analysis.h  settings.cpp  tagandcut.cpp
source/particle/: lhco.cpp  lhco.h  lhe.cpp  lhe.h  particle.cpp  particle.h
source/plot/: plot.cpp  plot.h  plot2d.cpp  plot2d.h  plot_default.h  plot_standard.cpp  plot_standard.h
source/utility/: utility.cpp  utility.h  utility.tpp
test/: Makefile  test.cpp
tests/: CMakeLists.txt  Makefile  README  test_all.cpp  test_bumphunter.cpp  test_cuts.cpp  test_event.cpp  test_heptop.cpp  test_histogram.cpp  test_jets.cpp  test_jets_merging.cpp  test_lhco.cpp  test_lhe.cpp  test_plot.cpp
tests/source/: test_all.cpp  test_bumphunter.cpp  test_cuts.cpp  test_event.cpp  test_heptop.cpp  test_histogram.cpp  test_jets.cpp  test_lhco.cpp  test_lhe.cpp  test_plot.cpp
tools/: CMakeLists.txt  Makefile  cutmc.cpp  gen_hepmc.cmnd  gen_hepmc.cpp  gen_lhco.sh  mergemc.cpp  plotmc.cpp  ttag.cpp  tztag.cmnd  tztag.cpp  tztag_basic.cpp  tztag_hunt.cmnd  tztag_hunt.cpp  tztag_orig.cpp
tools/cut/: cutmc.cpp
tools/plot/: plotmc.cpp
tools/source/: mergemc.cpp  ttag.cpp
ttag/: CMakeLists.txt  README  average_xsec.sh  calc_val.cpp  tztag_1top.cpp  tztag_2top.cpp  tztag_basic.cpp  tztag_cutmap.cmnd  tztag_cutmap.cpp  tztag_cutmap_findmax.cmnd  tztag_cutmap_findmax.cpp  tztag_dist.cpp  tztag_hunt.cmnd  tztag_hunt.cpp  tztag_hunt_1top.cmnd  tztag_hunt_2top.cmnd  tztag_hunt_kin_dist.cmnd
